--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,51 @@
-streamlit==1.46.0
-pandas==1.5.3
-pandasai==2.0.44
-pymongo==4.13.2
-python-dotenv==1.1.0
-werkzeug==3.1.3
-Pillow==10.4.0
-openai==1.90.0
+altair==5.5.0
+altgraph==0.17.4
+audioread==3.0.1
+bcrypt==4.3.0
+ctranslate2==4.5.0
+faster-whisper==1.1.1
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+fpdf==1.7.2
+GitPython==3.1.44
+google-api-python-client==2.162.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+httpx==0.28.1
+huggingface-hub==0.29.1
+librosa==0.10.2.post1
+lightning==2.5.0.post0
+matplotlib==3.9.0
+moviepy==2.1.2
+mysql-connector-python==9.1.0
+numpy==1.26.4
+openai-whisper @ git+https://github.com/openai/whisper.git@517a43ecd132a2089d85f4ebc044728a71d49f6e
+pandas==2.2.1
+pillow==10.4.0
+protobuf==5.29.3
+pydeck==0.9.1
+pyinstaller==6.12.0
+pyinstaller-hooks-contrib==2025.1
+pymongo==4.11.1
+python-dotenv==1.0.1
+pytorch-lightning==2.5.0.post0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.2
+soundfile==0.13.1
+SQLAlchemy==2.0.38
+streamlit==1.42.2
+tensorboardX==2.6.2.2
+torch==2.6.0
+torchaudio==2.6.0
+torchmetrics==1.6.1
+torchvision==0.21.0
+tqdm==4.67.1
+Werkzeug==3.1.3
+WTForms==3.2.1
