--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: allytics
     env: python
-    buildCommand: ""
+    buildCommand: "pip install --no-cache-dir -r requirements.txt"
     startCommand: streamlit run app.py --server.port=$PORT --server.enableCORS=false
     plan: free
